--- a/FE/src/app/pages/home/home.component.html
+++ b/FE/src/app/pages/home/home.component.html
@@ -16,4 +16,220 @@
     
         </div>
       </section>
+
+      <section id="clients" class="section-bg">
+
+        <div class="container" data-aos="fade-up">
+  
+          <div class="section-header">
+            <h3>Our CLients</h3>
+            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque dere santome nida.</p>
+          </div>
+  
+          <div class="row g-0 clients-wrap clearfix" data-aos="zoom-in" data-aos-delay="100">
+  
+            <div class="col-lg-3 col-md-4 col-xs-6">
+              <div class="client-logo">
+                <img src="assets/img/clients/client-1.png" class="img-fluid" alt="">
+              </div>
+            </div>
+  
+            <div class="col-lg-3 col-md-4 col-xs-6">
+              <div class="client-logo">
+                <img src="assets/img/clients/client-2.png" class="img-fluid" alt="">
+              </div>
+            </div>
+  
+            <div class="col-lg-3 col-md-4 col-xs-6">
+              <div class="client-logo">
+                <img src="assets/img/clients/client-3.png" class="img-fluid" alt="">
+              </div>
+            </div>
+  
+            <div class="col-lg-3 col-md-4 col-xs-6">
+              <div class="client-logo">
+                <img src="assets/img/clients/client-4.png" class="img-fluid" alt="">
+              </div>
+            </div>
+  
+            <div class="col-lg-3 col-md-4 col-xs-6">
+              <div class="client-logo">
+                <img src="assets/img/clients/client-5.png" class="img-fluid" alt="">
+              </div>
+            </div>
+  
+            <div class="col-lg-3 col-md-4 col-xs-6">
+              <div class="client-logo">
+                <img src="assets/img/clients/client-6.png" class="img-fluid" alt="">
+              </div>
+            </div>
+  
+            <div class="col-lg-3 col-md-4 col-xs-6">
+              <div class="client-logo">
+                <img src="assets/img/clients/client-7.png" class="img-fluid" alt="">
+              </div>
+            </div>
+  
+            <div class="col-lg-3 col-md-4 col-xs-6">
+              <div class="client-logo">
+                <img src="assets/img/clients/client-8.png" class="img-fluid" alt="">
+              </div>
+            </div>
+  
+          </div>
+  
+        </div>
+  
+      </section>
+
+      
+
+      <section id="why-us">
+        <div class="container" data-aos="fade-up">
+          <header class="section-header">
+            <h3>Why choose us?</h3>
+            <p>Laudem latine persequeris id sed, ex fabulas delectus quo. No vel partiendo abhorreant vituperatoribus.</p>
+          </header>
+  
+          <div class="row row-eq-height justify-content-center">
+  
+            <div class="col-lg-4 mb-4">
+              <div class="card" data-aos="zoom-in" data-aos-delay="100">
+                <i class="bi bi-calendar4-week"></i>
+                <div class="card-body">
+                  <h5 class="card-title">Corporis dolorem</h5>
+                  <p class="card-text">Deleniti optio et nisi dolorem debitis. Aliquam nobis est temporibus sunt ab inventore officiis aut voluptatibus.</p>
+                  <a href="#" class="readmore">Read more </a>
+                </div>
+              </div>
+            </div>
+  
+            <div class="col-lg-4 mb-4">
+              <div class="card" data-aos="zoom-in" data-aos-delay="200">
+                <i class="bi bi-camera-reels"></i>
+                <div class="card-body">
+                  <h5 class="card-title">Voluptates dolores</h5>
+                  <p class="card-text">Voluptates nihil et quis omnis et eaque omnis sint aut. Ducimus dolorum aspernatur.</p>
+                  <a href="#" class="readmore">Read more </a>
+                </div>
+              </div>
+            </div>
+  
+            <div class="col-lg-4 mb-4">
+              <div class="card" data-aos="zoom-in" data-aos-delay="300">
+                <i class="bi bi-chat-square-text"></i>
+                <div class="card-body">
+                  <h5 class="card-title">Eum ut aspernatur</h5>
+                  <p class="card-text">Autem quod nesciunt eos ea aut amet laboriosam ab. Eos quis porro in non nemo ex. </p>
+                  <a href="#" class="readmore">Read more </a>
+                </div>
+              </div>
+            </div>
+  
+          </div>
+  
+          <!-- <div class="row counters" data-aos="fade-up" data-aos-delay="100">
+  
+            <div class="col-lg-3 col-6 text-center">
+              <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
+              <p>Clients</p>
+            </div>
+  
+            <div class="col-lg-3 col-6 text-center">
+              <span data-purecounter-start="0" data-purecounter-end="421" data-purecounter-duration="1" class="purecounter"></span>
+              <p>Projects</p>
+            </div>
+  
+            <div class="col-lg-3 col-6 text-center">
+              <span data-purecounter-start="0" data-purecounter-end="1364" data-purecounter-duration="1" class="purecounter"></span>
+              <p>Hours Of Support</p>
+            </div>
+  
+            <div class="col-lg-3 col-6 text-center">
+              <span data-purecounter-start="0" data-purecounter-end="42" data-purecounter-duration="1" class="purecounter"></span>
+              <p>Hard Workers</p>
+            </div>
+  
+          </div> -->
+  
+        </div>
+      </section>
+
+      <section id="testimonials" class="section-bg">
+        <div class="container" data-aso="zoom-in">
+  
+          <header class="section-header">
+            <h3>Testimonials</h3>
+          </header>
+  
+          <div class="row justify-content-center">
+            <div class="col-lg-8">
+  
+              <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
+                <div class="swiper-wrapper">
+  
+                  <div class="swiper-slide">
+                    <div class="testimonial-item">
+                      <img src="assets/img/testimonial-1.jpg" class="testimonial-img" alt="">
+                      <h3>Saul Goodman</h3>
+                      <h4>Ceo &amp; Founder</h4>
+                      <p>
+                        Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
+                      </p>
+                    </div>
+                  </div><!-- End testimonial item -->
+  
+                  <div class="swiper-slide">
+                    <div class="testimonial-item">
+                      <img src="assets/img/testimonial-2.jpg" class="testimonial-img" alt="">
+                      <h3>Sara Wilsson</h3>
+                      <h4>Designer</h4>
+                      <p>
+                        Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
+                      </p>
+                    </div>
+                  </div><!-- End testimonial item -->
+  
+                  <div class="swiper-slide">
+                    <div class="testimonial-item">
+                      <img src="assets/img/testimonial-3.jpg" class="testimonial-img" alt="">
+                      <h3>Jena Karlis</h3>
+                      <h4>Store Owner</h4>
+                      <p>
+                        Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
+                      </p>
+                    </div>
+                  </div><!-- End testimonial item -->
+  
+                  <div class="swiper-slide">
+                    <div class="testimonial-item">
+                      <img src="assets/img/testimonial-4.jpg" class="testimonial-img" alt="">
+                      <h3>Matt Brandon</h3>
+                      <h4>Freelancer</h4>
+                      <p>
+                        Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
+                      </p>
+                    </div>
+                  </div><!-- End testimonial item -->
+  
+                  <div class="swiper-slide">
+                    <div class="testimonial-item">
+                      <img src="assets/img/testimonial-5.jpg" class="testimonial-img" alt="">
+                      <h3>John Larson</h3>
+                      <h4>Entrepreneur</h4>
+                      <p>
+                        Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
+                      </p>
+                    </div>
+                  </div><!-- End testimonial item -->
+  
+                </div>
+                <div class="swiper-pagination"></div>
+              </div>
+  
+            </div>
+          </div>
+  
+        </div>
+      </section>
 </body>
