--- a/FE/src/app/containers/footer/footer.component.html
+++ b/FE/src/app/containers/footer/footer.component.html
@@ -11,9 +11,9 @@
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
-              <li><a href="#">Home</a></li>
-              <li><a href="#">About us</a></li>
-              <li><a href="#">Services</a></li>
+              <li><a href="/home">Home</a></li>
+              <li><a href="/about">About us</a></li>
+              <li><a href="/service">Services</a></li>
               <li><a href="#">Terms of service</a></li>
               <li><a href="#">Privacy policy</a></li>
             </ul>
@@ -22,11 +22,11 @@
           <div class="col-lg-3 col-md-6 footer-contact">
             <h4>Contact Us</h4>
             <p>
-              A108 Adam Street <br>
-              New York, NY 535022<br>
-              United States <br>
-              <strong>Phone:</strong> +1 5589 55488 55<br>
-              <strong>Email:</strong> info@example.com<br>
+              Ninh Kieu <br>
+              Can Tho<br>
+              Biet Nam <br>
+              <strong>Phone:</strong> +84 123 456 789<br>
+              <strong>Email:</strong> CAA@gmail.com<br>
             </p>
   
             <div class="social-links">
@@ -52,11 +52,8 @@
     </div>
   
     <div class="container">
-      <div class="copyright">
-        &copy; Copyright <strong>NewBiz</strong>. All Rights Reserved
-      </div>
       <div class="credits">
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        Designed by CAA team
       </div>
     </div>
   </footer>
