update content for website

--- a/FE/src/app/containers/footer/footer.component.html
+++ b/FE/src/app/containers/footer/footer.component.html
@@ -24,7 +24,7 @@
             <p>
               Ninh Kieu <br>
               Can Tho<br>
-              Biet Nam <br>
+              Viet Nam <br>
               <strong>Phone:</strong> +84 123 456 789<br>
               <strong>Email:</strong> CAA@gmail.com<br>
             </p>
