--- a/FE/src/app/pages/about/about.component.html
+++ b/FE/src/app/pages/about/about.component.html
@@ -8,69 +8,74 @@
 
       <div class="row about-container">
 
-        <div class="col-lg-6 content order-lg-1 order-2">
+        <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-right">
+          <h4><strong>Đại diện VAA tham dự Đại hội II và chụp ảnh lưu niệm cùng Ban chấp hành CAA.</strong>
+            </h4>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+            <strong>Cần Thơ Automation Association</strong> ( viết tắt là CAA) được tái thành lập năm 2015 trên nền tảng Hội Khoa học Công nghệ Tự động Cần Thơ, với 25 thành viên, Ban chấp hành Hộ tự Động hoá Cần Thơ đã và đang nỗ lực điều hành nhiều hoạt động thường xuyên cho 150 hội viên.
           </p>
-
-          <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
-            <div class="icon"><i class="bi bi-card-checklist"></i></div>
-            <h4 class="title"><a href="">Eiusmod Tempor</a></h4>
-            <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
-          </div>
-
-          <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
-            <div class="icon"><i class="bi bi-brightness-high"></i></div>
-            <h4 class="title"><a href="">Magni Dolores</a></h4>
-            <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-          </div>
-
-          <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
-            <div class="icon"><i class="bi bi-calendar4-week"></i></div>
-            <h4 class="title"><a href="">Dolor Sitema</a></h4>
-            <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
-          </div>
-
+          <p>
+            Giai đoạn 2015-2020, Hội tự động hoá Cần Thơ (CAA) đã thực hiện tốt vai trò cầu nối giữa các hãng thiết bị tự động hoá, các doanh nghiệp, các viện trường và các cơ quan quản lý vùng, góp phần tích cực trong việc đưa Đồng Bằng Sông Cửu Long(ĐBSCL) từng bước phát triển trong lĩnh vực số hóa và tự động hoá.
+          </p>
         </div>
 
         <div class="col-lg-6 background order-lg-2" data-aos="zoom-in">
-          <img src="assets/img/about-img.svg" class="img-fluid" alt="">
+          <img src="assets/img/about-extra-1.PNG" class="img-fluid" alt="">
         </div>
       </div>
 
       <div class="row about-extra">
         <div class="col-lg-6" data-aos="fade-right">
-          <img src="assets/img/about-extra-1.svg" class="img-fluid" alt="">
+          <img src="assets/img/about-extra-2.PNG" class="img-fluid" alt="">
         </div>
         <div class="col-lg-6 pt-5 pt-lg-0" data-aos="fade-left">
-          <h4>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h4>
+          <h4>Hợp tác xây dựng Automation Lab giữa CAA với Siemens Vietnam, KVIP và Đại học Cần Thơ.</h4>
           <p>
-            Ipsum in aspernatur ut possimus sint. Quia omnis est occaecati possimus ea. Quas molestiae perspiciatis occaecati qui rerum. Deleniti quod porro sed quisquam saepe. Numquam mollitia recusandae non ad at et a.
+            Ngay sau khi tái thành lập, CAA đã phối hợp với Công ty TNHH  Siemens tổ chức “Siemens Automation Day 2016” với hội thảo chuyên đề về “Những tiện ích khi làm kỹ thuật với TIA Portal V13 SP1”, nhằm giới thiệu những công cụ ứng dụng cho các giải pháp tự động hóa tiên tiến đến các doanh nghiệp sản xuất trên địa bàn thành phố.
           </p>
           <p>
-            Ad vitae recusandae odit possimus. Quaerat cum ipsum corrupti. Odit qui asperiores ea corporis deserunt veritatis quidem expedita perferendis. Qui rerum eligendi ex doloribus quia sit. Porro rerum eum eum.
+            Thông qua sự kiện này, Hội đã ký kết hợp tác bốn bên với Vườn ươm Công nghệ Công nghiệp Việt Nam – Hàn Quốc (KVIP), Công ty TNHH Siemens và Khoa Công nghệ - Đại học Cần Thơ. Theo đó, Công ty TNHH Siemens đã tài trợ trang thiết bị để CAA thành lập Phòng kiểm chứng công nghệ tự động hóa (Automation Lab).
+          </p>
+          <p>
+            Automation Lab được bố trí tại KVIP, tận dụng nguồn lực cán bộ, sinh viên của Đại học Cần Thơ để hỗ trợ của các Hội viên và các doanh nghiệp trực tiếp trải nghiệm, kiểm chứng ý tưởng tự động hóa. Đây là nền tảng cơ bản để CAA tiếp tục phát triển và tổ chức nhiều hoạt động tập huấn ngắn hạn đến hôm nay.
           </p>
         </div>
       </div>
 
       <div class="row about-extra">
         <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-left">
-          <img src="assets/img/about-extra-2.svg" class="img-fluid" alt="">
+          <img src="assets/img/about-extra-3.PNG" class="img-fluid" alt="">
         </div>
-
         <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-right">
-          <h4>Neque saepe temporibus repellat ea ipsum et. Id vel et quia tempora facere reprehenderit.</h4>
+          <h4>Khai mạc Hội nghị toàn quốc lần thứ 8 về Cơ điện tử – VCM 2016 tại Trường Đại học Cần Thơ.</h4>
           <p>
-            Delectus alias ut incidunt delectus nam placeat in consequatur. Sed cupiditate quia ea quis. Voluptas nemo qui aut distinctio. Cumque fugit earum est quam officiis numquam. Ducimus corporis autem at blanditiis beatae incidunt sunt.
+            Sau giãn cách xã hội do dịch Covid-2019, Hội đã phối hợp với Sở Công Thương, Sở Khoa học và Công nghệ TP. Cần Thơ tổ chức giới thiệu và hướng dẫn cho 07 doanh nghiệp trên địa bàn thành phố tham gia chương trình hỗ trợ đổi mới công nghệ của thành phố và chương trình hỗ trợ khởi nghiệp, đổi mới sáng tạo; tổ chức chuyên đề về Biến tần và truyền thông công nghiệp cho hội viên và các doanh nghiệp trên địa bàn.
           </p>
           <p>
-            Voluptas saepe natus quidem blanditiis. Non sunt impedit voluptas mollitia beatae. Qui esse molestias. Laudantium libero nisi vitae debitis. Dolorem cupiditate est perferendis iusto.
+            Ngoài ra, CAA đang phối hợp với Liên hiệp các Hội khoa học kỹ thuật TP. Cần Thơ thực hiện đề tài “Nghiên cứu giải pháp thúc đẩy hoạt động chuyển giao, ứng dụng, đổi mới công nghệ tại thành phố Cần Thơ”.
           </p>
           <p>
-            Eum quia in. Magni quas ipsum a. Quis ex voluptatem inventore sint quia modi. Numquam est aut fuga mollitia exercitationem nam accusantium provident quia.
+            Dưới sự tác động tích cực của CAA, Công ty TNHH Siemens đã ký thỏa thuận tài trợ việc thành lập “Digital Industry Academy” với Trường Đại học Cần Thơ.
           </p>
         </div>
+      </div>
 
+      <div class="row about-extra">
+        <div class="col-lg-6" data-aos="fade-right">
+          <img src="assets/img/about-extra-4.PNG" class="img-fluid" alt="">
+        </div>
+        <div class="col-lg-6 pt-5 pt-lg-0" data-aos="fade-left">
+          <h4>CAA phối hợp với Công ty TNHH TM Thái Sơn Nam và Công ty TNHH Tự động hóa SCADA tổ chức Hội thảo Biến tần (LS) và Truyền thông công nghiệp.</h4>
+          <p>
+            Trước xu thế của cuộc cách mạng công nghiệp lần thứ 4, nhu cầu về hoạt động chuyển giao, ứng dụng và đổi mới công nghệ tại ĐBSCL đang đặt ra cho CAA nhiều nhiệm vụ. Đồng thời, nhu cầu về đào tạo “nguồn nhân lực 4.0” cũng đang đặt ra cho các cấp, các ngành nhiều thách thức.
+          </p>
+          <p>
+            Thời gian tới, CAA sẽ đẩy mạnh hơn nữa các hoạt động thiết thực để thực hiện sứ mệnh của mình. Một số hoạt động trên quy mô lớn sẽ được triển khai cho ĐBSCL như: phối hợp với Siemens thành lập “Trung tâm đào tạo công nghiệp số và phát triển ứng dụng”; phối hợp với Mitsubishi Electric thành lập “Trung tâm giải pháp tự động hóa”; phối hợp với Rockwell Automation xây dựng “Phòng thí nghiệp 4.0” và phối hợp với SMC Corporation xây dựng “Nhà máy 4.0”.
+          </p>
+          <p>
+            Các trung tâm này đều đã được ký thỏa thuận và đang trong quá trình hoàn thiện, đặt tại Khoa Công Nghệ, trường Đại học Cần Thơ. Trước mắt, CAA sẽ tổ chức Đại hội khóa 3 vào cuối năm, nhằm kiện toàn ban chấp hành hội nhiệm kỳ 2020 – 2025 và thúc đẩy hơn nữa vai trò cầu nối giữa các bên liên quan vì sứ mệnh thúc đẩy công cuộc số hóa và tự động hóa vùng ĐBSCL.
+          </p>
+        </div>
       </div>
 
     </div>
