--- a/FE/src/app/pages/contact/contact.component.html
+++ b/FE/src/app/pages/contact/contact.component.html
@@ -17,7 +17,7 @@
           <div class="row">
             <div class="col-md-5 info">
               <i class="bi bi-geo-alt"></i>
-              <p>Ninh Kieu, Can Tho</p>
+              <p>Số 59 Hùng Vương, phường Thới Bình, <br>Quận Ninh Kiều, TP Cần Thơ</p>
             </div>
             <div class="col-md-4 info">
               <i class="bi bi-envelope"></i>
