--- a/FE/src/app/pages/home/home.component.html
+++ b/FE/src/app/pages/home/home.component.html
@@ -30,51 +30,76 @@
   
             <div class="col-lg-3 col-md-4 col-xs-6">
               <div class="client-logo">
-                <img src="assets/img/clients/client-1.png" class="img-fluid" alt="">
+                <img src="assets/img/clients/client-1.PNG" class="img-fluid" alt="">
               </div>
             </div>
   
             <div class="col-lg-3 col-md-4 col-xs-6">
               <div class="client-logo">
-                <img src="assets/img/clients/client-2.png" class="img-fluid" alt="">
+                <img src="assets/img/clients/client-2.PNG" class="img-fluid" alt="">
               </div>
             </div>
   
             <div class="col-lg-3 col-md-4 col-xs-6">
               <div class="client-logo">
-                <img src="assets/img/clients/client-3.png" class="img-fluid" alt="">
+                <img src="assets/img/clients/client-3.PNG" class="img-fluid" alt="">
               </div>
             </div>
   
             <div class="col-lg-3 col-md-4 col-xs-6">
               <div class="client-logo">
-                <img src="assets/img/clients/client-4.png" class="img-fluid" alt="">
+                <img src="assets/img/clients/client-4.PNG" class="img-fluid" alt="">
               </div>
             </div>
   
             <div class="col-lg-3 col-md-4 col-xs-6">
               <div class="client-logo">
-                <img src="assets/img/clients/client-5.png" class="img-fluid" alt="">
+                <img src="assets/img/clients/client-5.PNG" class="img-fluid" alt="">
               </div>
             </div>
   
             <div class="col-lg-3 col-md-4 col-xs-6">
               <div class="client-logo">
-                <img src="assets/img/clients/client-6.png" class="img-fluid" alt="">
+                <img src="assets/img/clients/client-6.PNG" class="img-fluid" alt="">
               </div>
             </div>
   
             <div class="col-lg-3 col-md-4 col-xs-6">
               <div class="client-logo">
-                <img src="assets/img/clients/client-7.png" class="img-fluid" alt="">
+                <img src="assets/img/clients/client-7.PNG" class="img-fluid" alt="">
               </div>
             </div>
   
             <div class="col-lg-3 col-md-4 col-xs-6">
               <div class="client-logo">
-                <img src="assets/img/clients/client-8.png" class="img-fluid" alt="">
+                <img src="assets/img/clients/client-8.PNG" class="img-fluid" alt="">
               </div>
             </div>
+
+            <div class="col-lg-3 col-md-4 col-xs-6">
+              <div class="client-logo">
+                <img src="assets/img/clients/client-9.PNG" class="img-fluid" alt="">
+              </div>
+            </div>
+
+            <div class="col-lg-3 col-md-4 col-xs-6">
+              <div class="client-logo">
+                <img src="assets/img/clients/client-10.PNG" class="img-fluid" alt="">
+              </div>
+            </div>
+
+            <div class="col-lg-3 col-md-4 col-xs-6">
+              <div class="client-logo">
+                <img src="assets/img/clients/client-11.PNG" class="img-fluid" alt="">
+              </div>
+            </div>
+
+            <div class="col-lg-3 col-md-4 col-xs-6">
+              <div class="client-logo">
+                <img src="assets/img/clients/client-12.PNG" class="img-fluid" alt="">
+              </div>
+            </div>
+
   
           </div>
   
