--- a/FE/src/app/pages/services/services.component.html
+++ b/FE/src/app/pages/services/services.component.html
@@ -10,45 +10,45 @@
 
         <div class="col-md-6 col-lg-5" data-aos="zoom-in" data-aos-delay="100">
           <div class="box">
-            <div class="icon"><i class="bi bi-briefcase" style="color: #ff689b;"></i></div>
-            <h4 class="title"><a href="">Lorem Ipsum</a></h4>
+            <div class="icon"><img src="assets/img/services/service-1.png"></div>
+            <h4 class="title"><a href="">Phân phối thiết bị điện và tự động hóa</a></h4>
             <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
           </div>
         </div>
         <div class="col-md-6 col-lg-5" data-aos="zoom-in" data-aos-delay="200">
           <div class="box">
-            <div class="icon"><i class="bi bi-card-checklist" style="color: #e9bf06;"></i></div>
-            <h4 class="title"><a href="">Dolor Sitema</a></h4>
+            <div class="icon"><img src="assets/img/services/service-2.png"></div>
+            <h4 class="title"><a href="">Giải pháp IoT và bảo mật</a></h4>
             <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
           </div>
         </div>
 
         <div class="col-md-6 col-lg-5" data-aos="zoom-in" data-aos-delay="100">
           <div class="box">
-            <div class="icon"><i class="bi bi-bar-chart" style="color: #3fcdc7;"></i></div>
-            <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
+            <div class="icon"><img src="assets/img/services/service-3.png"></div>
+            <h4 class="title"><a href="">Máy móc- dây chuyền tự động hóa và số hóa</a></h4>
             <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
           </div>
         </div>
         <div class="col-md-6 col-lg-5" data-aos="zoom-in" data-aos-delay="200">
           <div class="box">
-            <div class="icon"><i class="bi bi-binoculars" style="color:#41cf2e;"></i></div>
-            <h4 class="title"><a href="">Magni Dolores</a></h4>
+            <div class="icon"><img src="assets/img/services/service-4.png"></div>
+            <h4 class="title"><a href="">Giải pháp tự động hóa và số hóa công nghiệp</a></h4>
             <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
           </div>
         </div>
 
         <div class="col-md-6 col-lg-5" data-aos="zoom-in" data-aos-delay="100">
           <div class="box">
-            <div class="icon"><i class="bi bi-brightness-high" style="color: #d6ff22;"></i></div>
-            <h4 class="title"><a href="">Nemo Enim</a></h4>
+            <div class="icon"><img src="assets/img/services/service-5.png"></div>
+            <h4 class="title"><a href="">Đào tạo tự động hóa và số hóa công nghiệp</a></h4>
             <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
           </div>
         </div>
         <div class="col-md-6 col-lg-5" data-aos="zoom-in" data-aos-delay="200">
           <div class="box">
-            <div class="icon"><i class="bi bi-calendar4-week" style="color: #4680ff;"></i></div>
-            <h4 class="title"><a href="">Eiusmod Tempor</a></h4>
+            <div class="icon"><img src="assets/img/services/service-6.png"></div>
+            <h4 class="title"><a href="">Dịch vụ kĩ thuật công nghiệp</a></h4>
             <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
           </div>
         </div>
