--- a/FE/src/app/pages/team/team.component.html
+++ b/FE/src/app/pages/team/team.component.html
@@ -7,9 +7,9 @@
 
       <div class="row">
 
-        <div class="col-lg-3 col-md-6" data-aos="zoom-out" data-aos-delay="100">
+        <div class="col-lg-4 col-md-6" data-aos="zoom-out" data-aos-delay="100">
           <div class="member">
-            <img src="assets/img/team-1.jpg" class="img-fluid" alt="">
+            <img src="assets/img/team-1.png" class="img-fluid" alt="">
             <div class="member-info">
               <div class="member-info-content">
                 <h4>Walter White</h4>
@@ -25,9 +25,9 @@
           </div>
         </div>
 
-        <div class="col-lg-3 col-md-6" data-aos="zoom-out" data-aos-delay="200">
+        <div class="col-lg-4 col-md-6" data-aos="zoom-out" data-aos-delay="200">
           <div class="member">
-            <img src="assets/img/team-2.jpg" class="img-fluid" alt="">
+            <img src="assets/img/team-2.png" class="img-fluid" alt="">
             <div class="member-info">
               <div class="member-info-content">
                 <h4>Sarah Jhonson</h4>
@@ -43,9 +43,9 @@
           </div>
         </div>
 
-        <div class="col-lg-3 col-md-6" data-aos="zoom-out" data-aos-delay="300">
+        <div class="col-lg-4 col-md-6" data-aos="zoom-out" data-aos-delay="300">
           <div class="member">
-            <img src="assets/img/team-3.jpg" class="img-fluid" alt="">
+            <img src="assets/img/team-3.png" class="img-fluid" alt="">
             <div class="member-info">
               <div class="member-info-content">
                 <h4>William Anderson</h4>
