change homepage content

--- a/FE/src/app/pages/home/home.component.html
+++ b/FE/src/app/pages/home/home.component.html
@@ -1,75 +1,75 @@
 <body>
     <section id="hero" class="clearfix">
         <div class="container" data-aos="fade-up">
-    
+
           <div class="hero-img" data-aos="zoom-out" data-aos-delay="200">
-            <img src="assets/img/hero-img.svg" alt="" class="img-fluid">
+            <img src="assets/img/teamwork.svg" alt="" class="img-fluid">
           </div>
-    
+
           <div class="hero-info" data-aos="zoom-in" data-aos-delay="100">
-            <h2>We provide<br><span>solutions</span><br>for your business!</h2>
+            <h2>We provide<br><span>solutions</span><br>for you!</h2>
             <div>
               <a href="/about" class="btn-get-started scrollto">Get Started</a>
               <a href="/service" class="btn-services scrollto">Our Services</a>
             </div>
           </div>
-    
+
         </div>
       </section>
 
       <section id="clients" class="section-bg">
 
         <div class="container" data-aos="fade-up">
-  
+
           <div class="section-header">
             <h3>Our CLients</h3>
-            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque dere santome nida.</p>
+            <p>Portfolio of clients who trust us.</p>
           </div>
-  
+
           <div class="row g-0 clients-wrap clearfix" data-aos="zoom-in" data-aos-delay="100">
-  
+
             <div class="col-lg-3 col-md-4 col-xs-6">
               <div class="client-logo">
                 <img src="assets/img/clients/client-1.PNG" class="img-fluid" alt="">
               </div>
             </div>
-  
+
             <div class="col-lg-3 col-md-4 col-xs-6">
               <div class="client-logo">
                 <img src="assets/img/clients/client-2.PNG" class="img-fluid" alt="">
               </div>
             </div>
-  
+
             <div class="col-lg-3 col-md-4 col-xs-6">
               <div class="client-logo">
                 <img src="assets/img/clients/client-3.PNG" class="img-fluid" alt="">
               </div>
             </div>
-  
+
             <div class="col-lg-3 col-md-4 col-xs-6">
               <div class="client-logo">
                 <img src="assets/img/clients/client-4.PNG" class="img-fluid" alt="">
               </div>
             </div>
-  
+
             <div class="col-lg-3 col-md-4 col-xs-6">
               <div class="client-logo">
                 <img src="assets/img/clients/client-5.PNG" class="img-fluid" alt="">
               </div>
             </div>
-  
+
             <div class="col-lg-3 col-md-4 col-xs-6">
               <div class="client-logo">
                 <img src="assets/img/clients/client-6.PNG" class="img-fluid" alt="">
               </div>
             </div>
-  
+
             <div class="col-lg-3 col-md-4 col-xs-6">
               <div class="client-logo">
                 <img src="assets/img/clients/client-7.PNG" class="img-fluid" alt="">
               </div>
             </div>
-  
+
             <div class="col-lg-3 col-md-4 col-xs-6">
               <div class="client-logo">
                 <img src="assets/img/clients/client-8.PNG" class="img-fluid" alt="">
@@ -100,99 +100,99 @@
               </div>
             </div>
 
-  
+
           </div>
-  
+
         </div>
-  
+
       </section>
 
-      
+
 
       <section id="why-us">
         <div class="container" data-aos="fade-up">
           <header class="section-header">
             <h3>Why choose us?</h3>
-            <p>Laudem latine persequeris id sed, ex fabulas delectus quo. No vel partiendo abhorreant vituperatoribus.</p>
+            <p>We deliver quality technology services in the most efficient way, at a price that will allow you to deliver more.</p>
           </header>
-  
+
           <div class="row row-eq-height justify-content-center">
-  
+
             <div class="col-lg-4 mb-4">
               <div class="card" data-aos="zoom-in" data-aos-delay="100">
                 <i class="bi bi-calendar4-week"></i>
                 <div class="card-body">
-                  <h5 class="card-title">Corporis dolorem</h5>
-                  <p class="card-text">Deleniti optio et nisi dolorem debitis. Aliquam nobis est temporibus sunt ab inventore officiis aut voluptatibus.</p>
+                  <h5 class="card-title">Digital solutions</h5>
+                  <p class="card-text">Our experts help you to find the right business model to kick off your MVP with us, build your new Startup as a Service, or consult you through digitalisation processes.</p>
                   <a href="#" class="readmore">Read more </a>
                 </div>
               </div>
             </div>
-  
+
             <div class="col-lg-4 mb-4">
               <div class="card" data-aos="zoom-in" data-aos-delay="200">
                 <i class="bi bi-camera-reels"></i>
                 <div class="card-body">
-                  <h5 class="card-title">Voluptates dolores</h5>
-                  <p class="card-text">Voluptates nihil et quis omnis et eaque omnis sint aut. Ducimus dolorum aspernatur.</p>
+                  <h5 class="card-title">E-commerce</h5>
+                  <p class="card-text">You want to build your own Online Business? Our Spryker, Shopware, Commercetools, Hybris or Shopify solution teams identify the best fitting plattform for your needs.</p>
                   <a href="#" class="readmore">Read more </a>
                 </div>
               </div>
             </div>
-  
+
             <div class="col-lg-4 mb-4">
               <div class="card" data-aos="zoom-in" data-aos-delay="300">
                 <i class="bi bi-chat-square-text"></i>
                 <div class="card-body">
-                  <h5 class="card-title">Eum ut aspernatur</h5>
-                  <p class="card-text">Autem quod nesciunt eos ea aut amet laboriosam ab. Eos quis porro in non nemo ex. </p>
+                  <h5 class="card-title">Our experience</h5>
+                  <p class="card-text">As an excellent valued employer and long-term collaboration with all major universities, we have rapid access to the market to provide the best experts for your needs.</p>
                   <a href="#" class="readmore">Read more </a>
                 </div>
               </div>
             </div>
-  
+
           </div>
-  
+
           <!-- <div class="row counters" data-aos="fade-up" data-aos-delay="100">
-  
+
             <div class="col-lg-3 col-6 text-center">
               <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
               <p>Clients</p>
             </div>
-  
+
             <div class="col-lg-3 col-6 text-center">
               <span data-purecounter-start="0" data-purecounter-end="421" data-purecounter-duration="1" class="purecounter"></span>
               <p>Projects</p>
             </div>
-  
+
             <div class="col-lg-3 col-6 text-center">
               <span data-purecounter-start="0" data-purecounter-end="1364" data-purecounter-duration="1" class="purecounter"></span>
               <p>Hours Of Support</p>
             </div>
-  
+
             <div class="col-lg-3 col-6 text-center">
               <span data-purecounter-start="0" data-purecounter-end="42" data-purecounter-duration="1" class="purecounter"></span>
               <p>Hard Workers</p>
             </div>
-  
+
           </div> -->
-  
+
         </div>
       </section>
 
       <section id="testimonials" class="section-bg">
         <div class="container" data-aso="zoom-in">
-  
+
           <header class="section-header">
             <h3>Testimonials</h3>
           </header>
-  
+
           <div class="row justify-content-center">
             <div class="col-lg-8">
-  
+
               <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
                 <div class="swiper-wrapper">
-  
+
                   <div class="swiper-slide">
                     <div class="testimonial-item">
                       <img src="assets/img/testimonial-1.jpg" class="testimonial-img" alt="">
@@ -203,7 +203,7 @@
                       </p>
                     </div>
                   </div><!-- End testimonial item -->
-  
+
                   <div class="swiper-slide">
                     <div class="testimonial-item">
                       <img src="assets/img/testimonial-2.jpg" class="testimonial-img" alt="">
@@ -214,7 +214,7 @@
                       </p>
                     </div>
                   </div><!-- End testimonial item -->
-  
+
                   <div class="swiper-slide">
                     <div class="testimonial-item">
                       <img src="assets/img/testimonial-3.jpg" class="testimonial-img" alt="">
@@ -225,7 +225,7 @@
                       </p>
                     </div>
                   </div><!-- End testimonial item -->
-  
+
                   <div class="swiper-slide">
                     <div class="testimonial-item">
                       <img src="assets/img/testimonial-4.jpg" class="testimonial-img" alt="">
@@ -236,7 +236,7 @@
                       </p>
                     </div>
                   </div><!-- End testimonial item -->
-  
+
                   <div class="swiper-slide">
                     <div class="testimonial-item">
                       <img src="assets/img/testimonial-5.jpg" class="testimonial-img" alt="">
@@ -247,14 +247,14 @@
                       </p>
                     </div>
                   </div><!-- End testimonial item -->
-  
+
                 </div>
                 <div class="swiper-pagination"></div>
               </div>
-  
+
             </div>
           </div>
-  
+
         </div>
       </section>
 </body>
