--- a/FE/src/app/containers/header/header.component.css
+++ b/FE/src/app/containers/header/header.component.css
@@ -15,23 +15,23 @@
     border-radius: 50px;
     transition: all 0.4s;
   }
-  
+
   .back-to-top i {
     font-size: 28px;
     color: #fff;
     line-height: 0;
   }
-  
+
   .back-to-top:hover {
     background: #2990ff;
     color: #fff;
   }
-  
+
   .back-to-top.active {
     visibility: visible;
     opacity: 1;
   }
-  
+
   /*--------------------------------------------------------------
   # Header
   --------------------------------------------------------------*/
@@ -42,11 +42,11 @@
     background: #fff;
     box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.3);
   }
-  
+
   #header.header-scrolled {
     height: 60px;
   }
-  
+
   #header .logo h1 {
     font-size: 36px;
     margin: 0;
@@ -55,34 +55,46 @@
     letter-spacing: 3px;
     text-transform: uppercase;
   }
-  
+
   @media (max-width: 991px) {
     #header .logo h1 {
       font-size: 28px;
     }
   }
-  
+
   #header .logo h1 a,
   #header .logo h1 a:hover {
     color: #00366f;
     text-decoration: none;
   }
-  
+
   #header .logo img {
     padding: 0;
-    max-height: 26px;
+    max-height: 60px;
   }
-  
+
+  a {
+    color: #0d6efd;
+    text-decoration: none;
+  }
+
+  #header .logo span {
+    color: #00366f;
+    font-size: 34px;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 400;
+    text-transform: uppercase;
+  }
   /*--------------------------------------------------------------
   # Navigation Menu
   --------------------------------------------------------------*/
   /**
-  * Desktop Navigation 
+  * Desktop Navigation
   */
   .navbar {
     padding: 0;
   }
-  
+
   .navbar ul {
     margin: 0;
     padding: 0;
@@ -90,11 +102,11 @@
     list-style: none;
     align-items: center;
   }
-  
+
   .navbar li {
     position: relative;
   }
-  
+
   .navbar a,
   .navbar a:focus {
     display: flex;
@@ -108,21 +120,21 @@
     white-space: nowrap;
     transition: 0.3s;
   }
-  
+
   .navbar a i,
   .navbar a:focus i {
     font-size: 12px;
     line-height: 0;
     margin-left: 5px;
   }
-  
+
   .navbar a:hover,
   .navbar .active,
   .navbar .active:focus,
   .navbar li:hover>a {
     color: #007bff;
   }
-  
+
   .navbar .dropdown ul {
     display: block;
     position: absolute;
@@ -137,58 +149,58 @@
     box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
     transition: 0.3s;
   }
-  
+
   .navbar .dropdown ul li {
     min-width: 200px;
   }
-  
+
   .navbar .dropdown ul a {
     padding: 10px 20px;
     font-size: 14px;
     text-transform: none;
   }
-  
+
   .navbar .dropdown ul a i {
     font-size: 12px;
   }
-  
+
   .navbar .dropdown ul a:hover,
   .navbar .dropdown ul .active:hover,
   .navbar .dropdown ul li:hover>a {
     color: #007bff;
   }
-  
+
   .navbar .dropdown:hover>ul {
     opacity: 1;
     top: 100%;
     visibility: visible;
   }
-  
+
   .navbar .dropdown .dropdown ul {
     top: 0;
     left: calc(100% - 30px);
     visibility: hidden;
   }
-  
+
   .navbar .dropdown .dropdown:hover>ul {
     opacity: 1;
     top: 0;
     left: 100%;
     visibility: visible;
   }
-  
+
   @media (max-width: 1366px) {
     .navbar .dropdown .dropdown ul {
       left: -90%;
     }
-  
+
     .navbar .dropdown .dropdown:hover>ul {
       left: -100%;
     }
   }
-  
+
   /**
-  * Mobile Navigation 
+  * Mobile Navigation
   */
   .mobile-nav-toggle {
     color: #283d50;
@@ -198,21 +210,21 @@
     line-height: 0;
     transition: 0.5s;
   }
-  
+
   .mobile-nav-toggle.bi-x {
     color: #fff;
   }
-  
+
   @media (max-width: 991px) {
     .mobile-nav-toggle {
       display: block;
     }
-  
+
     .navbar ul {
       display: none;
     }
   }
-  
+
   .navbar-mobile {
     position: fixed;
     overflow: hidden;
@@ -224,13 +236,13 @@
     transition: 0.3s;
     z-index: 999;
   }
-  
+
   .navbar-mobile .mobile-nav-toggle {
     position: absolute;
     top: 15px;
     right: 15px;
   }
-  
+
   .navbar-mobile ul {
     display: block;
     position: absolute;
@@ -243,20 +255,20 @@
     overflow-y: auto;
     transition: 0.3s;
   }
-  
+
   .navbar-mobile a,
   .navbar-mobile a:focus {
     padding: 10px 20px;
     font-size: 15px;
     color: #004289;
   }
-  
+
   .navbar-mobile a:hover,
   .navbar-mobile .active,
   .navbar-mobile li:hover>a {
     color: #007bff;
   }
-  
+
   .navbar-mobile .dropdown ul {
     position: static;
     display: none;
@@ -268,26 +280,25 @@
     background: #fff;
     box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
   }
-  
+
   .navbar-mobile .dropdown ul li {
     min-width: 200px;
   }
-  
+
   .navbar-mobile .dropdown ul a {
     padding: 10px 20px;
   }
-  
+
   .navbar-mobile .dropdown ul a i {
     font-size: 12px;
   }
-  
+
   .navbar-mobile .dropdown ul a:hover,
   .navbar-mobile .dropdown ul .active:hover,
   .navbar-mobile .dropdown ul li:hover>a {
     color: #007bff;
   }
-  
+
   .navbar-mobile .dropdown>.dropdown-active {
     display: block;
   }
-  
