--- a/FE/src/app/containers/header/header.component.html
+++ b/FE/src/app/containers/header/header.component.html
@@ -1,12 +1,12 @@
 <header id="header" class="fixed-top d-flex align-items-center">
     <div class="container d-flex justify-content-between">
-  
+
       <div class="logo">
         <!-- Uncomment below if you prefer to use an text logo -->
         <!-- <h1><a href="index.html">NewBiz</a></h1> -->
-        <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>
+        <a href="index.html"><img src="assets/img/home_logo.png" alt="" class="img-fluid"><span>CAA</span></a>
       </div>
-  
+
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
@@ -35,6 +35,6 @@
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
-  
+
     </div>
   </header>
