change homepage content

--- a/FE/src/app/pages/home/home.component.html
+++ b/FE/src/app/pages/home/home.component.html
@@ -7,7 +7,7 @@
           </div>
 
           <div class="hero-info" data-aos="zoom-in" data-aos-delay="100">
-            <h2>We provide<br><span>solutions</span><br>for you!</h2>
+            <h2>Cooperation for<br><span>mutual development,</span><br>solidarity to <span>reach far!</span></h2>
             <div>
               <a href="/about" class="btn-get-started scrollto">Get Started</a>
               <a href="/service" class="btn-services scrollto">Our Services</a>
@@ -122,8 +122,8 @@
               <div class="card" data-aos="zoom-in" data-aos-delay="100">
                 <i class="bi bi-calendar4-week"></i>
                 <div class="card-body">
-                  <h5 class="card-title">Digital solutions</h5>
-                  <p class="card-text">Our experts help you to find the right business model to kick off your MVP with us, build your new Startup as a Service, or consult you through digitalisation processes.</p>
+                  <h5 class="card-title">Technology Solutions</h5>
+                  <p class="card-text">Want to build a manufacturing plant? But have not found a place to consult and provide equipment for your business. With this issue CAA is very confident that we can help you with this. Because we are an association of consulting companies and provide solutions to help businesses access the most modern production lines and equipment.</p>
                   <a href="#" class="readmore">Read more </a>
                 </div>
               </div>
@@ -133,8 +133,8 @@
               <div class="card" data-aos="zoom-in" data-aos-delay="200">
                 <i class="bi bi-camera-reels"></i>
                 <div class="card-body">
-                  <h5 class="card-title">E-commerce</h5>
-                  <p class="card-text">You want to build your own Online Business? Our Spryker, Shopware, Commercetools, Hybris or Shopify solution teams identify the best fitting plattform for your needs.</p>
+                  <h5 class="card-title">Training program</h5>
+                  <p class="card-text">We cooperate with universities in the Mekong Delta and prestigious training institutions. Open training classes for engineers with expertise in IoT, PLC, HMT, ROBOT, Inverter, .. After the course, students have enough professional knowledge, can apply for jobs or be admitted to working at CAA member companies.</p>
                   <a href="#" class="readmore">Read more </a>
                 </div>
               </div>
@@ -144,8 +144,8 @@
               <div class="card" data-aos="zoom-in" data-aos-delay="300">
                 <i class="bi bi-chat-square-text"></i>
                 <div class="card-body">
-                  <h5 class="card-title">Our experience</h5>
-                  <p class="card-text">As an excellent valued employer and long-term collaboration with all major universities, we have rapid access to the market to provide the best experts for your needs.</p>
+                  <h5 class="card-title">Development Goals</h5>
+                  <p class="card-text">Laying the foundation of "cooperation for development, solidarity and reaching out", CAA wishes to cooperate together: Training and developing human resources, bringing the highest benefits and prosperous life to all members of the association. We always consider all customers as partners, creating efficiency and bringing fair benefits to both parties.</p>
                   <a href="#" class="readmore">Read more </a>
                 </div>
               </div>
