--- a/FE/src/app/pages/team/team.component.html
+++ b/FE/src/app/pages/team/team.component.html
@@ -12,8 +12,8 @@
             <img src="assets/img/team-1.png" class="img-fluid" alt="">
             <div class="member-info">
               <div class="member-info-content">
-                <h4>Walter White</h4>
-                <span>Chief Executive Officer</span>
+                <h4>Dương Nghĩa Hiệp</h4>
+                <span>Chủ tịch hội</span>
                 <div class="social">
                   <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -30,8 +30,8 @@
             <img src="assets/img/team-2.png" class="img-fluid" alt="">
             <div class="member-info">
               <div class="member-info-content">
-                <h4>Sarah Jhonson</h4>
-                <span>Product Manager</span>
+                <h4>Phan Hồng Toàn</h4>
+                <span>Phó chủ tịch hội</span>
                 <div class="social">
                   <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -48,8 +48,8 @@
             <img src="assets/img/team-3.png" class="img-fluid" alt="">
             <div class="member-info">
               <div class="member-info-content">
-                <h4>William Anderson</h4>
-                <span>CTO</span>
+                <h4>Nguyễn Chí Ngôn</h4>
+                <span>Phó chủ tịch hội</span>
                 <div class="social">
                   <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
