--- a/FE/src/app/containers/footer/footer.component.html
+++ b/FE/src/app/containers/footer/footer.component.html
@@ -2,12 +2,12 @@
     <div class="footer-top">
       <div class="container">
         <div class="row">
-  
+
           <div class="col-lg-4 col-md-6 footer-info">
-            <h3>NewBiz</h3>
-            <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus. Scelerisque felis imperdiet proin fermentum leo. Amet volutpat consequat mauris nunc congue.</p>
+            <h3>CAA</h3>
+            <p>Laying the foundation of "cooperation for development, solidarity and reaching out", CAA wishes to cooperate together: Training and developing human resources, bringing the highest benefits and prosperous life to all members of the association.</p>
           </div>
-  
+
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
@@ -18,7 +18,7 @@
               <li><a href="#">Privacy policy</a></li>
             </ul>
           </div>
-  
+
           <div class="col-lg-3 col-md-6 footer-contact">
             <h4>Contact Us</h4>
             <p>
@@ -28,7 +28,7 @@
               <strong>Phone:</strong> +84 123 456 789<br>
               <strong>Email:</strong> CAA@gmail.com<br>
             </p>
-  
+
             <div class="social-links">
               <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
               <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
@@ -36,9 +36,9 @@
               <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
               <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
             </div>
-  
+
           </div>
-  
+
           <div class="col-lg-3 col-md-6 footer-newsletter">
             <h4>Our Newsletter</h4>
             <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna veniam enim veniam illum dolore legam minim quorum culpa amet magna export quem marada parida nodela caramase seza.</p>
@@ -46,11 +46,11 @@
               <input type="email" name="email"><input type="submit" value="Subscribe">
             </form>
           </div>
-  
+
         </div>
       </div>
     </div>
-  
+
     <div class="container">
       <div class="credits">
         Designed by CAA team
