Align header title and add user icon to sign in, sign up

--- a/FE/src/app/containers/header/header.component.html
+++ b/FE/src/app/containers/header/header.component.html
@@ -4,7 +4,7 @@
       <div class="logo">
         <!-- Uncomment below if you prefer to use an text logo -->
         <!-- <h1><a href="index.html">NewBiz</a></h1> -->
-        <a href="index.html"><img src="assets/img/home_logo.png" alt="" class="img-fluid"><span>CAA</span></a>
+        <a href="index.html"><img src="assets/img/home_logo.png" alt="" class="img-fluid"><span class="header-title">CAA</span></a>
       </div>
 
       <nav id="navbar" class="navbar">
@@ -32,6 +32,15 @@
             </ul>
           </li> -->
           <li><a class="nav-link scrollto" href="contact">Contact</a></li>
+          <!-- <li><a class="nav-link scrollto" href="signin">Sign in</a></li>
+          <li><a class="nav-link scrollto" href="signup" id="sign-up">Sign up</a></li> -->
+          <div class="dropdown" style="float:right;">
+            <i class="bi bi-person-circle" id="user-icon"></i>
+            <div class="dropdown-content">
+              <a href="#">Sign in</a>
+              <a href="#">Sign up</a>
+            </div>
+          </div>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
