--- a/FE/src/app/containers/header/header.component.css
+++ b/FE/src/app/containers/header/header.component.css
@@ -302,3 +302,44 @@
   .navbar-mobile .dropdown>.dropdown-active {
     display: block;
   }
+
+  .header-title{
+    vertical-align: middle;
+  }
+  
+  #user-icon{
+    margin-left: 25px;
+    font-size: 25px;
+    color: #004289;
+    cursor: pointer;
+  }
+
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    right: 0;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 8px 8px 10px 8px rgb(0 0 0 / 20%);
+    z-index: 1;
+    border-radius: 5px;
+  }
+  
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    border-bottom: .5px solid;
+  }
+  
+  .dropdown-content a:hover {background-color: #f1f1f1;}
+  .dropdown:hover .dropdown-content {display: block;}
+  .dropdown:hover .dropbtn {
+    color: #001f3f;
+  }
