Add login feature

--- a/FE/src/app/containers/header/header.component.html
+++ b/FE/src/app/containers/header/header.component.html
@@ -37,7 +37,7 @@
           <div class="dropdown" style="float:right;">
             <i class="bi bi-person-circle" id="user-icon"></i>
             <div class="dropdown-content">
-              <a href="#">Sign in</a>
+              <a href="login">Sign in</a>
               <a href="#">Sign up</a>
             </div>
           </div>
