--- a/FE/src/app/containers/header/header.component.html
+++ b/FE/src/app/containers/header/header.component.html
@@ -34,12 +34,12 @@
           <li><a class="nav-link scrollto" href="contact">Contact</a></li>
           <!-- <li><a class="nav-link scrollto" href="signin">Sign in</a></li>
           <li><a class="nav-link scrollto" href="signup" id="sign-up">Sign up</a></li> -->
-          <div class="dropdown" style="float:right;">
+          <div class="dropdown" style="float:left">
             <i class="bi bi-person-circle" id="user-icon"></i>
-            <div class="dropdown-content">
-              <a href="login">Sign in</a>
-              <a href="#">Sign up</a>
-            </div>
+            <ul>
+              <li><a href="login">Sign in</a></li>
+              <!-- <li><a href="#">Sign up</a></li> -->
+            </ul>
           </div>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
