--- a/FE/src/app/containers/header/header.component.html
+++ b/FE/src/app/containers/header/header.component.html
@@ -14,6 +14,12 @@
           <li><a class="nav-link scrollto" href="service">Services</a></li>
           <li><a class="nav-link scrollto " href="education">Educations</a></li>
           <li><a class="nav-link scrollto" href="team">Team</a></li>
+          <li class="dropdown"><a href="#"><span>News</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li><a href="#">News</a></li>
+              <li><a href="#">Projects</a></li>
+            </ul>
+          </li>
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
@@ -32,15 +38,21 @@
             </ul>
           </li> -->
           <li><a class="nav-link scrollto" href="contact">Contact</a></li>
+          <li class="dropdown"><a href="#"><span><i class="bi bi-person-circle" id="user-icon"></i></span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li><a href="#">Sign in</a></li>
+              <li><a href="#">Sign up</a></li>
+            </ul>
+          </li>
           <!-- <li><a class="nav-link scrollto" href="signin">Sign in</a></li>
           <li><a class="nav-link scrollto" href="signup" id="sign-up">Sign up</a></li> -->
-          <div class="dropdown" style="float:right;">
+          <!-- <div class="dropdown" style="float:right;">
             <i class="bi bi-person-circle" id="user-icon"></i>
             <div class="dropdown-content">
               <a href="#">Sign in</a>
               <a href="#">Sign up</a>
             </div>
-          </div>
+          </div> -->
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
