create news page

--- a/FE/src/app/containers/header/header.component.html
+++ b/FE/src/app/containers/header/header.component.html
@@ -16,7 +16,7 @@
           <li><a class="nav-link scrollto" href="team">Team</a></li>
           <li class="dropdown"><a href="#"><span>News</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="#">News</a></li>
+              <li><a href="news">News</a></li>
               <li><a href="#">Projects</a></li>
             </ul>
           </li>
