create news-details page

--- a/FE/src/app/pages/news/news.component.html
+++ b/FE/src/app/pages/news/news.component.html
@@ -11,7 +11,7 @@
             <img src="assets/img/news1.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-5 pt-lg-0" data-aos="fade-left">
-            <h4 class="title"><a href="">Giải pháp 3S iFACTORY đưa giấc mơ nhà máy thông minh của doanh nghiệp sản xuất Việt thành hiện thực.</a></h4>
+            <h4 class="title"><a href="news-details">Giải pháp 3S iFACTORY đưa giấc mơ nhà máy thông minh của doanh nghiệp sản xuất Việt thành hiện thực.</a></h4>
             <p>
               Sau Covid-19, chuyển đổi số theo mô hình nhà máy thông minh là một trong những chiến lược được nhiều doanh nghiệp sản xuất ưu tiên phát triển để phục hồi và bứt phá. Và 3S iFACTORY chính là một giải pháp tối ưu để biến giấc mơ nhà máy thông minh của doanh nghiệp sản xuất Việt thành hiện thực.
             </p>
@@ -27,7 +27,7 @@
           </div>
 
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-right">
-            <h4 class="title"><a href="">Giới thiệu Ứng dụng giám sát Trung tâm dữ liệu – phòng Server.</a></h4>
+            <h4 class="title"><a href="news-details">Giới thiệu Ứng dụng giám sát Trung tâm dữ liệu – phòng Server.</a></h4>
             <p>
               Các máy chủ, thiết bị mạng đắt tiền được thiết kế để hoạt động trong một điều kiện nhiệt độ độ ẩm tiêu chuẩn. Thiết bị điện tử cũng phải tránh xa nước ẩm. Với một Datacenter lớn, mặc dù đã có giám sát đo nhiệt độ độ ẩm, nhưng khi ngập nước do một sự cố đường ống chẳng hạn sẽ thấy việc thiếu giám sát rò nước đã gây ra hậu quả như thế nào.
             </p>
