create projects page

--- a/FE/src/app/containers/header/header.component.html
+++ b/FE/src/app/containers/header/header.component.html
@@ -17,7 +17,7 @@
           <li class="dropdown"><a href="#"><span>News</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="news">News</a></li>
-              <li><a href="#">Projects</a></li>
+              <li><a href="projects">Projects</a></li>
             </ul>
           </li>
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
