--- a/FE/src/app/pages/projects/projects.component.html
+++ b/FE/src/app/pages/projects/projects.component.html
@@ -27,7 +27,7 @@
                 <h4><a href="portfolio-details.html">Dự án chống ngập TP. HCM 4</a></h4>
                 <p>16/01/2021</p>
                 <div>
-                  <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
+                  <a href="projects-details" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
                 </div>
               </div>
             </div>
@@ -40,7 +40,7 @@
                 <h4><a href="portfolio-details.html">Dự án chống ngập TP. HCM 4</a></h4>
                 <p>16/01/2021</p>
                 <div>
-                  <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
+                  <a href="projects-details" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
                 </div>
               </div>
             </div>
@@ -53,7 +53,7 @@
                 <h4><a href="portfolio-details.html">Dự án chống ngập TP. HCM 4</a></h4>
                 <p>16/01/2021</p>
                 <div>
-                  <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
+                  <a href="projects-details" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
                 </div>
               </div>
             </div>
@@ -65,7 +65,7 @@
                 <h4><a href="portfolio-details.html">Dự án chống ngập TP. HCM 4</a></h4>
                 <p>16/01/2021</p>
                 <div>
-                  <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
+                  <a href="projects-details" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
                 </div>
               </div>
             </div>
@@ -78,7 +78,7 @@
                 <h4><a href="portfolio-details.html">Dự án chống ngập TP. HCM 4</a></h4>
                 <p>16/01/2021</p>
                 <div>
-                  <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
+                  <a href="projects-details" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
                 </div>
               </div>
             </div>
@@ -91,7 +91,7 @@
                 <h4><a href="portfolio-details.html">Dự án chống ngập TP. HCM 4</a></h4>
                 <p>16/01/2021</p>
                 <div>
-                  <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
+                  <a href="projects-details" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
                 </div>
               </div>
             </div>
