custom website content and interface

--- a/FE/src/app/pages/education-details/education-details.component.html
+++ b/FE/src/app/pages/education-details/education-details.component.html
@@ -5,7 +5,7 @@
         <h2>Education Details</h2>
         <ol>
           <li><a href="home">Home</a></li>
-          <li><a href="education">Education</a></li>
+          <li><a href="education">Educations</a></li>
           <li>Education Details</li>
         </ol>
       </div>
@@ -16,7 +16,7 @@
     <div class="container">
         <div>
             <div class="portfolio-description">
-              <h2>This is an example of portfolio detail</h2>
+              <h2>This is an example of education detail</h2>
               <p>
                   PLC (viết tắt của Programmable Logic Controller) là thiết bị cho phép lập trình thực hiện các thuật toán điều khiển logic. Bộ lập trình PLC nhận tác động các sự kiện bên ngoài thông qua ngõ vào (input) và thực hiện hoạt động thông qua ngõ ra (output). PLC hoạt động theo phương thức quét các trạng thái trên đầu ra và đầu vào. Khi có sự thay đổi bất kỳ từ ngõ vào, dựa theo logic chương trình ngõ ra tương ứng sẽ thay đổi.
               </p>
