--- a/FE/src/app/pages/education/education.component.html
+++ b/FE/src/app/pages/education/education.component.html
@@ -1,3 +1,16 @@
+<section class="breadcrumbs">
+    <div class="container">
+
+      <div class="d-flex justify-content-between align-items-center">
+        <h2>Educations</h2>
+        <ol>
+          <li><a href="home">Home</a></li>
+          <li>Educations</li>
+        </ol>
+      </div>
+
+    </div>
+  </section>
 <section id="portfolio" class="clearfix">
     <div class="container" data-aos="fade-up">
 
@@ -5,7 +18,7 @@
         <h3 class="section-title">Education</h3>
         <p>Nhằm đào tạo đội ngũ kỹ sư chuyên nghiệp trong lĩnh vực tự động hóa, CAA kết hợp cùng SCADA Automation mở ra các khóa học về IoT, biến tần, robot,...</p>
       </header>
-<!-- 
+<!--
       <div class="row" data-aos="fade-up" data-aos-delay="100">
         <div class="col-lg-12">
           <ul id="portfolio-flters">
