--- a/FE/src/app/pages/news-details/news-details.component.html
+++ b/FE/src/app/pages/news-details/news-details.component.html
@@ -25,7 +25,7 @@
                 Năm 2022 chứng kiến sự chuyển dịch lớn trong chuỗi cung ứng toàn cầu. Nhiều tập đoàn lớn trên thế giới dịch chuyển dần nhà máy và cơ sở nghiên cứu đầu não sang các nước Đông Nam Á. Để trở thành mắt xích trong chuỗi giá trị này, doanh nghiệp buộc phải tuân thủ những tiêu chuẩn tiêu chuẩn khắt khe, từ dây chuyền công nghệ đến năng lực quản lý,…Chính vì lý do đó, triển khai mô hình nhà máy thông minh là hướng đi phát triển tất yếu của các đơn vị sản xuất Việt muốn tăng tốc để chen chân gia nhập vào cuộc chơi toàn cầu.
               </p>
               <p>
-                  Tại Việt Nam, nhiều giải pháp công nghệ hướng đến “nhà máy số” đã ra đời. Trong đó phải kể đến giải pháp nhà máy thông minh 3S iFACTORY giúp chuyển đổi số toàn diện cho các đơn vị sản xuất. Với những ưu việt về kết nối dữ liệu, cải thiện chất lượng, tối ưu chi phí, năng suất nhảy vọt, rút ngắn thời gian giao hàng,...,3S iFACTORY đang được nhiều nhà máy lớn trong nước cũng như các doanh nghiệp FDI tin tưởng ứng dụng.
+                  Tại Việt Nam, nhiều giải pháp công nghệ hướng đến “nhà máy số” đã ra đời. Trong đó phải kể đến <b>giải pháp nhà máy thông minh 3S iFACTORY</b> giúp chuyển đổi số toàn diện cho các đơn vị sản xuất. Với những ưu việt về kết nối dữ liệu, cải thiện chất lượng, tối ưu chi phí, năng suất nhảy vọt, rút ngắn thời gian giao hàng,...,3S iFACTORY đang được nhiều nhà máy lớn trong nước cũng như các doanh nghiệp FDI tin tưởng ứng dụng.
               </p>
               <p><b>3S iFACTORY - Biến giấc mơ nhà máy thông minh thành hiện thực</b>
               </p>
@@ -52,10 +52,13 @@
         <div class="portfolio-description">
       <p>3S iFACTORY là bộ giải pháp chuyển đổi số toàn diện có sự kết hợp giữa tầng IT (công nghệ thông tin) và tầng OT (công nghệ vận hành),và được kiến trúc theo tiêu chuẩn quốc tế ISA-95. Với khả năng tích hợp các công nghệ 4.0 như Big Data, IoT,..., 3S iFACTORY bao gồm 4 tầng ứng dụng:
       </p>
-      <p>- 3S BIZHUB (Hệ thống báo cáo thông minh)</p>
-      <p>- 3S ERP (Phần mềm quản trị doanh nghiệp)</p>
-      <p>- 3S MES (Phần mềm quản lý sản xuất)</p>
-      <p>- 3S IIOTHUB (Hệ thống kết nối - tự động hóa sản xuất).</p>
+              <ul>
+                <li>3S BIZHUB (Hệ thống báo cáo thông minh)</li>
+                <li>3S ERP (Phần mềm quản trị doanh nghiệp)</li>
+                <li>3S MES (Phần mềm quản lý sản xuất)</li>
+                <li>3S IIOTHUB (Hệ thống kết nối - tự động hóa sản xuất).</li>
+              </ul>
+
       <p>Thông qua dòng chảy thông tin hai chiều xuyên suốt, giải pháp hỗ trợ đắc lực cho doanh nghiệp kiểm soát mọi nguồn lực từ tầng xưởng sản xuất (Shopfloor) đến tầng chiến lược (Topfloor). Điều này giúp nhà quản trị có thêm nhiều chiều dữ liệu để tối ưu hoá bài toán S (Tốc độ mở rộng) - Q (Chất lượng) - C (Chi phí) - D (Tiến độ). Vì vậy, 3S iFACTORY được ví như cánh tay nối dài, nâng cao hoạt động quản lý và vận hành trong doanh nghiệp.</p>
       <p>Điểm vượt trội của bộ giải pháp 3S iFACTORY nằm ở tính thích ứng cao với từng ngành nghề trọng điểm tại Việt Nam. Hiện nay, ITG Technology nằm trong số ít những doanh nghiệp công nghệ có khả năng tư vấn từ chiến lược tới thực thi triển khai giải pháp chuyển đổi số sản xuất chuyên sâu theo các ngành dọc: Điện tử, Cơ khí – chế tạo, Đúc nhựa, In ấn và bao bì, Vật liệu xây dựng, Sản xuất nội – ngoại thất, Dược phẩm… So với các giải pháp đóng gói đến từ nước ngoài, 3S iFACTORY có thể linh hoạt thích ứng tùy theo mô hình sản xuất và đặc thù doanh nghiệp Việt. Thông qua quá trình nghiên cứu, tinh chỉnh, 3S iFACTORY trở thành phiên bản phù hợp nhất, mang lại hiệu quả tối đa trong các hoạt động kinh doanh sản xuất.
       Hiện nay, giải pháp nhà máy thông minh của ITG được ứng dụng tại nhiều doanh nghiệp lớn như: Panasonic Appliance, Asahi Kasei Advance Việt Nam, Sumitomo Rubber Việt Nam, Sunlin Electronics VN, EBA Machinery, Việt Mỹ Đồng Nai, Bao bì APP, Aluba Sunhouse, Dây và Cáp điện Ngọc Khánh, Traphaco CNC, …</p>
