--- a/FE/src/app/pages/news/news.component.html
+++ b/FE/src/app/pages/news/news.component.html
@@ -1,3 +1,16 @@
+<section class="breadcrumbs">
+      <div class="container">
+
+        <div class="d-flex justify-content-between align-items-center">
+          <h2>News</h2>
+          <ol>
+            <li><a href="index.html">Home</a></li>
+            <li>News</li>
+          </ol>
+        </div>
+
+      </div>
+    </section><!-- Breadcrumbs Section -->
 <section id="about">
       <div class="container" data-aos="fade-up">
 
