--- a/FE/src/app/pages/projects-details/projects-details.component.html
+++ b/FE/src/app/pages/projects-details/projects-details.component.html
@@ -4,8 +4,8 @@
         <div class="d-flex justify-content-between align-items-center">
           <h2>Projects Details</h2>
           <ol>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="portfolio.html">Projects</a></li>
+            <li><a href="home">Home</a></li>
+            <li><a href="projects">Projects</a></li>
             <li>Project Details</li>
           </ol>
         </div>
