--- a/FE/src/app/pages/projects/projects.component.html
+++ b/FE/src/app/pages/projects/projects.component.html
@@ -1,3 +1,16 @@
+<section class="breadcrumbs">
+      <div class="container">
+
+        <div class="d-flex justify-content-between align-items-center">
+          <h2>Projects</h2>
+          <ol>
+            <li><a href="index.html">Home</a></li>
+            <li>Projects</li>
+          </ol>
+        </div>
+
+      </div>
+    </section><!-- Breadcrumbs Section -->
 <!-- ======= Project Section ======= -->
     <section id="portfolio" class="clearfix">
       <div class="container" data-aos="fade-up">
