--- a/FE/src/app/pages/subcribe/subcribe.component.html
+++ b/FE/src/app/pages/subcribe/subcribe.component.html
@@ -1,8 +1,22 @@
+<section class="breadcrumbs">
+      <div class="container">
+
+        <div class="d-flex justify-content-between align-items-center">
+          <h2>Subscribe</h2>
+          <ol>
+            <li><a href="home">Home</a></li>
+            <li><a href="education">Educations</a></li>
+            <li>Subscribe</li>
+          </ol>
+        </div>
+
+      </div>
+    </section><!-- Breadcrumbs Section -->
 <section id="contact">
     <div class="container-fluid" data-aos="fade-up">
 
       <div class="section-header">
-        <h3>Subcribe</h3>
+        <h3>Subscribe</h3>
       </div>
 
       <div class="row">
@@ -71,7 +85,7 @@
                 <div class="sent-message">Your message has been sent. Thank you!</div>
               </div>
               <div class="text-center"><button type="submit" title="Send Message">Submit</button></div>
-              
+
             </form>
           </div>
         </div>
