--- a/FE/src/app/pages/education/education.component.html
+++ b/FE/src/app/pages/education/education.component.html
@@ -1,4 +1,4 @@
-<section class="breadcrumbs">
+<!-- <section class="breadcrumbs">
     <div class="container">
 
       <div class="d-flex justify-content-between align-items-center">
@@ -10,7 +10,7 @@
       </div>
 
     </div>
-  </section>
+  </section> -->
 <section id="portfolio" class="clearfix">
     <div class="container" data-aos="fade-up">
 
